--- a/spring-ai-agent/pom.xml
+++ b/spring-ai-agent/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>spring-ai-workflow</module>
         <module>spring-ai-agent-orchestrator</module>
+        <module>spring-ai-agent-evaluator-optimizer</module>
     </modules>
 
 </project> 
