--- a/.github/workflows/ai-code-review.yml
+++ b/.github/workflows/ai-code-review.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Run AI Code Review
         uses: zxcnoname666/AI-Code-Review@v1.2.0
         with:
-          GITHUB_TOKEN: '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'
-          OPENAI_API_KEY: 'AIzaSyBPsHcJ8mIEXnGyvzUDE_oEvV34M_6ktik'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_API_BASE_URL: 'https://generativelanguage.googleapis.com/v1'
           OPENAI_API_MODEL: 'gemini-2.5-pro'
           MAX_CHUNK_SIZE: '12000'  # Gemini supports larger context
